Fix style in planning to be responsive on mobile

--- a/client-ng1/src/app/less/main.less
+++ b/client-ng1/src/app/less/main.less
@@ -79,6 +79,9 @@ textarea {
 }
 
 @media (max-width: 479px) {
+  .cesar-layout__content{
+    overflow-x: auto !important;
+  }
   .hide-on-mobile{
     visibility: hidden;
     max-height: 0;
